--- a/presentation/src/main/res/values/colors.xml
+++ b/presentation/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="colorPrimary">#C8C8C8</color>
+    <color name="colorPrimaryDark">#002560</color>
+    <color name="colorAccent">#FFFFFF</color>
+
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -7,4 +11,15 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="bottom_navigation_background_color">#ffffff</color>
+    <color name="bottom_navigation_selected_color">#172B4D</color>
+    <color name="bottom_navigation_not_selected_color">#A3ADBB</color>
+    <color name="division_card_color">#D1CDCD</color>
+    <color name="ligthBlue">#006FFF</color>
+    <color name="mediumGray">#AFAFAF</color>
+    <color name="blue_login">#172B4D</color>
+    <color name="color_blue2"> #172B4D</color>
+    <color name="background">#FFFFFF</color>
 </resources>
